# starter-c89-90-cmake

./: CMakeLists.txt  LICENSE  README.md
include/: functions.h
src/: functions.c  main.c
